After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738796 - [PATCH] cli: Fix getting/setting hostname
[PATCH] cli: Fix getting/setting hostname
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-10-19 09:08 UTC by Lubomir Rintel
Modified: 2014-10-20 08:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] cli: Fix getting/setting hostname (1.20 KB, patch)
2014-10-19 09:08 UTC, Lubomir Rintel
accepted-commit_now Details | Review

Description Lubomir Rintel 2014-10-19 09:08:47 UTC
Created attachment 288833 [details] [review]
[PATCH] cli: Fix getting/setting hostname

Create a client instance before it's used.

$ nmcli g hostname
(process:13615): GLib-GObject-CRITICAL **: g_object_get: assertion 'G_IS_OBJECT (object)' failed
Comment 1 Dan Winship 2014-10-19 12:41:31 UTC
Comment on attachment 288833 [details] [review]
[PATCH] cli: Fix getting/setting hostname

looks pretty obviously correct
Comment 2 Jiri Klimes 2014-10-20 08:08:10 UTC
The patch is fine. Pushed to master:
461da6f cli: fix getting/setting hostname (bgo #738796)